--- a/package.json
+++ b/package.json
@@ -1,34 +1,20 @@
 {
-  "name": "ministore-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "reactapps2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "author": "JDB",
+  "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongodb": "^6.6.0",
     "mysql": "^2.18.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "stripe": "^15.5.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "mysql2": "^3.9.7",
+    "stripe": "^15.3.0"
   }
 }
